C++/.metadata/.plugins/org.eclipse.cdt.ui/Lab2-3-6.build.log
09:30:49 **** Incremental Build of configuration Debug for project Lab2-3-6 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lab2-3-6.o" "..\\src\\Lab2-3-6.cpp" 
..\src\Lab2-3-6.cpp: In function 'int main()':
..\src\Lab2-3-6.cpp:38:20: error: expected ';' before '<' token
  for (int b = 0, b < h; b++)
                    ^
..\src\Lab2-3-6.cpp:38:20: error: expected primary-expression before '<' token

09:30:50 Build Failed. 2 errors, 0 warnings. (took 477ms)

